0.1.9
    pulled ari serial_no decoder into a separate unction
    parsing akid defensively against edge case variants:
        in web pki it is almost always "keyid:"
        however the rfc allows for "uri:"+"serial:", 
           either in addition to keyid or replacing it

0.1.8
    added cert_info cli tool

0.1.7
    ARI support
        * ari_construct_identifier()
    added `serial` to parse_cert dicts
    testing on py13

0.1.6
    updated LetsEncrypt data

0.1.5 [deleted from PyPi]
    updated typing and tests
    updated LetsEncrypt data
    
0.1.4
    updated typing for dependencies

0.1.3
    new mypy version caught an issue

0.1.2
    docs improvements
    raise a new `FallbackError_FilepathRequired` exception when missing a
        required fallback filepath

0.1.1
    minor formatting
    Conditional Imports
        imports are tried "one at a time"; not "all or nothing".
        functions that use imports should test for all necessary options
    new extended tests for lacking specific libraries
    tests now monitor logs to ensure fallback behavior is triggered correctly

0.1.0
    initial release
    forked from peter_sslers